--- a/index.html
+++ b/index.html
@@ -205,6 +205,54 @@
       OFFICIAL WEBSITE
     </div>
 
+
+
+ <div style="max-width: 900px; margin: 0 auto; padding: 0 15px; box-sizing: border-box;">
+    <div style="margin-top: -10px; margin-bottom: 15px; border-left: 4px solid #806600; padding-left: 12px;">
+        <h2 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 8px;">
+            <span style="display: inline-block; width: 8px; height: 8px; background: #e11d48; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
+            LIVE TRACKER
+            <span style="font-size: 11px; color: #94a3b8; font-weight: 600; letter-spacing: 0.5px; margin-left: 5px;">(Current Status)</span>
+        </h2>
+    </div>
+</div>
+
+<div style="max-width: 900px; margin: 0 auto 15px; padding: 0 15px; box-sizing: border-box;">
+  <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 12px 18px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
+    <div style="display: flex; align-items: center; gap: 10px;">
+      <span style="background: #94a3b8; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">
+        Rescheduled
+      </span>
+      <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
+        Compadres Collegiate Qualifying (Oaks)
+      </div>
+    </div>
+    <div style="display: flex; align-items: center; gap: 15px;">
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">R1-R2 Status</span>
+        <span style="font-size: 14px; font-weight: 800; color: #e11d48;">68-69 <span style="color: #e11d48; font-size: 12px;">(-7)</span></span>
+      </div>
+      <div style="width: 1px; height: 20px; background: #e2e8f0;"></div>
+      <div style="text-align: left;">
+        <span style="display: block; font-size: 8px; color: #94a3b8; font-weight: 700; text-transform: uppercase;">POS</span>
+        <span style="font-size: 14px; font-weight: 800; color: #0c2340;">1</span>
+      </div>
+    </div>
+    <a href="ncaa-stats.html" style="text-decoration: none; color: #0c2340; font-size: 11px; font-weight: 800; border-bottom: 1.5px solid #0c2340; padding-bottom: 2px;">
+      VIEW STATUS UPDATE &rarr;
+    </a>
+  </div>
+</div>
+
+<style>
+@keyframes pulse {
+    0% { opacity: 1; }
+    50% { opacity: 0.4; }
+    100% { opacity: 1; }
+}
+</style>
+
+
     
 
 <div style="max-width: 900px; margin: 0 auto 15px; padding: 0 15px; box-sizing: border-box;">
