--- a/index.html
+++ b/index.html
@@ -208,12 +208,13 @@
 
 
 <div style="max-width: 900px; margin: 0 auto 15px; padding: 0 15px; box-sizing: border-box;">
-    <div style="margin-top: -15px; margin-bottom: 15px; border-left: 4px solid #806600; padding-left: 12px;">
-        <h2 style="margin: 0; color: #0c2340; font-size: 18px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 8px;">
-            <span style="display: inline-block; width: 8px; height: 8px; background: #e11d48; border-radius: 50%; animation: pulse 1.5s infinite;"></span>
-            LIVE TRACKER
-            <span style="font-size: 11px; color: #94a3b8; font-weight: 600; letter-spacing: 0.5px; margin-left: 5px;">(Current Status)</span>
+    <div style="margin-top: -10px; margin-bottom: 12px; display: flex; align-items: baseline; gap: 10px;">
+        <h2 style="margin: 0; color: #0c2340; font-size: 15px; font-weight: 900; letter-spacing: 1.5px; text-transform: uppercase;">
+            Ongoing Activity
         </h2>
+        <span style="font-size: 10px; color: #806600; font-weight: 700; letter-spacing: 0.5px; text-transform: uppercase;">
+            • Current Status
+        </span>
     </div>
 
     <div style="background: #ffffff; border: 1.5px solid #0c2340; border-radius: 8px; padding: 12px 18px; display: flex; align-items: center; justify-content: space-between; flex-wrap: wrap; gap: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
@@ -242,13 +243,6 @@
     </div>
 </div>
 
-<style>
-@keyframes pulse {
-    0% { opacity: 1; }
-    50% { opacity: 0.4; }
-    100% { opacity: 1; }
-}
-</style>
 
 
     
