--- a/news-media.html
+++ b/news-media.html
@@ -436,15 +436,30 @@
         </div>
       </a>
 
-      <a href="https://golf.com.mx/joshua-hong-gana-la-copa-sur-de-la-fmg/" target="_blank" style="text-decoration: none; color: inherit;">
-        <div style="display: flex; align-items: center; border: 1px solid #e0e0e0; border-radius: 10px; padding: 12px 15px; background: #fdfdfd; box-shadow: 0 2px 5px rgba(0,0,0,0.02);">
-          <div style="margin-right: 15px; width: 24px; height: 24px;"><img src="https://www.google.com/s2/favicons?sz=64&domain=golf.com.mx" style="width: 100%;"></div>
-          <div style="flex-grow: 1;">
-            <div style="font-size: 10px; color: #1b5e20; font-weight: bold;">GOLF.COM.MX</div>
-            <div style="font-size: 14px; font-weight: bold; color: #0c2340;">Joshua Hong gana la Copa Sur de la FMG</div>
-          </div>
-        </div>
-      </a>
+<a href="https://golf.com.mx/joshua-hong-gana-la-copa-sur-de-la-fmg/" target="_blank" style="text-decoration: none; color: inherit;">
+  <div style="display: flex; align-items: center; border: 1px solid #e2e8f0; border-radius: 12px; padding: 15px; background: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.02); transition: all 0.2s; margin-top: 12px;">
+    <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: #f8fafc; width: 40px; height: 40px; border-radius: 10px; border: 1px solid #e2e8f0;">
+      <img src="https://www.google.com/s2/favicons?sz=64&domain=golf.com.mx" style="width: 22px; height: 22px; border-radius: 4px;">
+    </div>
+    
+    <div style="flex-grow: 1;">
+      <div style="display: flex; align-items: center; gap: 6px; margin-bottom: 4px;">
+        <span style="font-size: 10px; color: #1b5e20; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
+        <span style="width: 3px; height: 3px; background: #cbd5e1; border-radius: 50%;"></span>
+        <span style="font-size: 10px; color: #64748b; font-weight: 600;">Media Coverage</span>
+      </div>
+      <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.4;">
+        Joshua Hong gana la Copa Sur de la FMG
+      </div>
+    </div>
+    
+    <div style="margin-left: 10px;">
+      <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#cbd5e1" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M9 18l6-6-6-6"></path>
+      </svg>
+    </div>
+  </div>
+</a>
 
       <a href="https://golf.com.mx/mexico-varonil-triunfa-en-la-calificacion-del-toyota-junior-golf-world-cup/" target="_blank" style="text-decoration: none; color: inherit;">
         <div style="display: flex; align-items: center; border: 1px solid #e2e8f0; border-radius: 12px; padding: 15px; background: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.02); transition: all 0.2s; margin-top: 12px;">
