--- a/news-media.html
+++ b/news-media.html
@@ -438,18 +438,24 @@
 
 <a href="https://golf.com.mx/joshua-hong-gana-la-copa-sur-de-la-fmg/" target="_blank" style="text-decoration: none; color: inherit;">
   <div style="display: flex; align-items: center; border: 1px solid #e2e8f0; border-radius: 12px; padding: 15px; background: #ffffff; box-shadow: 0 2px 8px rgba(0,0,0,0.02); transition: all 0.2s; margin-top: 12px;">
-    <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: #f8fafc; width: 40px; height: 40px; border-radius: 10px; border: 1px solid #e2e8f0;">
-      <img src="https://www.google.com/s2/favicons?sz=64&domain=golf.com.mx" style="width: 22px; height: 22px; border-radius: 4px;">
+    <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 40px; height: 40px; border-radius: 10px; border: 1px solid #dcfce7;">
+      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#1b5e20" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+        <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+        <path d="M4 22h16"></path>
+        <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+        <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+        <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+      </svg>
     </div>
     
     <div style="flex-grow: 1;">
-      <div style="display: flex; align-items: center; gap: 6px; margin-bottom: 4px;">
-        <span style="font-size: 10px; color: #1b5e20; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
-        <span style="width: 3px; height: 3px; background: #cbd5e1; border-radius: 50%;"></span>
-        <span style="font-size: 10px; color: #64748b; font-weight: 600;">Media Coverage</span>
+      <div style="display: flex; align-items: center; gap: 8px; margin-bottom: 6px;">
+        <span style="font-size: 9px; color: #ffffff; background: #1b5e20; padding: 2px 8px; border-radius: 4px; font-weight: 900; letter-spacing: 0.5px; text-transform: uppercase;">GOLF.COM.MX</span>
+        <span style="font-size: 10px; color: #94a3b8; font-weight: 700;">Tournament Victory</span>
       </div>
-      <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.4;">
-        Joshua Hong gana la Copa Sur de la FMG
+      <div style="font-size: 14px; font-weight: 800; color: #0c2340; line-height: 1.5; letter-spacing: -0.2px;">
+        Joshua Hong <span style="color: #1b5e20;">gana</span> la Copa Sur de la FMG
       </div>
     </div>
     
