--- a/reference-links.html
+++ b/reference-links.html
@@ -191,12 +191,26 @@
   </div>
 
   <div style="margin-bottom: 30px; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
-    <div style="background-color: #ff5a00; color: white; padding: 15px 20px; font-weight: bold; font-size: 18px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🎓</span> NCAA DI Career (University of Texas at San Antonio)
-    </div>
+<div style="background-color: #0c2340; color: white; padding: 18px 20px; font-weight: 800; font-size: 18px; display: flex; align-items: center; border-radius: 12px 12px 0 0; border-bottom: 3px solid #806600;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.1); width: 32px; height: 32px; border-radius: 8px;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M22 10v6M2 10l10-5 10 5-10 5z"></path>
+      <path d="M6 12v5c3 3 9 3 12 0v-5"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">NCAA DI Career (University of Texas at San Antonio)</span>
+</div>
     <div style="padding: 25px; background-color: #fcfcfc;">
       <div style="margin-bottom: 20px;">
-        <b style="color: #0c2340;">⭐ High-Level Collegiate Events:</b><br>
+        <div style="display: flex; align-items: flex-start; gap: 10px; margin-bottom: 12px; padding-left: 5px;">
+  <div style="margin-top: 3px;">
+    <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="20 6 9 17 4 12"></polyline>
+    </svg>
+  </div>
+  <span style="color: #475569; font-size: 14px; line-height: 1.5;">
+    </span>
+</div><br>
         <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 14px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0;">Patriot All-America Invitational (Leaderboard)</a> |  
         <a href="https://patriotallamerica.com/players/patriot_players-men/" target="_blank" style="color: #1565c0; font-size: 14px; text-decoration: none; border-bottom: 1px solid #1565c0;">Official Profile</a>
       </div>
