--- a/reference-links.html
+++ b/reference-links.html
@@ -236,9 +236,16 @@
   </div>
 
   <div style="margin-bottom: 30px; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
-    <div style="background-color: #0c2340; color: white; padding: 15px 20px; font-weight: bold; font-size: 18px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🌎</span> International Championships (National Team)
-    </div>
+<div style="background-color: #0c2340; color: white; padding: 18px 20px; font-weight: 800; font-size: 18px; display: flex; align-items: center; border-radius: 12px 12px 0 0; border-bottom: 3px solid #806600;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.1); width: 32px; height: 32px; border-radius: 8px;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="2" y1="12" x2="22" y2="12"></line>
+      <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">International Championships (National Team)</span>
+</div>
     <div style="padding: 25px; background-color: #fcfcfc;">
       <ul style="list-style: none; padding: 0; margin: 0;">
         <li style="margin-bottom: 15px; padding-bottom: 10px; border-bottom: 1px dotted #ccc;">
@@ -263,9 +270,19 @@
   </div>
 
   <div style="margin-bottom: 30px; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
-    <div style="background-color: #1b5e20; color: white; padding: 15px 20px; font-weight: bold; font-size: 18px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🏆</span> National Junior Tournaments (FMG/WAGR)
-    </div>
+   <div style="background-color: #1b5e20; color: white; padding: 18px 20px; font-weight: 800; font-size: 18px; display: flex; align-items: center; border-radius: 12px 12px 0 0; border-bottom: 3px solid #806600;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.1); width: 32px; height: 32px; border-radius: 8px;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+      <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+      <path d="M4 22h16"></path>
+      <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+      <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+      <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">National Junior Tournaments (FMG/WAGR)</span>
+</div>
     <div style="padding: 25px; background-color: #fcfcfc; font-size: 13px;">
       <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px;">
         
@@ -294,9 +311,16 @@
   </div>
 
   <div style="margin-bottom: 30px; border: 1px solid #e0e0e0; border-radius: 8px; overflow: hidden; box-shadow: 0 4px 10px rgba(0,0,0,0.03);">
-    <div style="background-color: #555; color: white; padding: 15px 20px; font-weight: bold; font-size: 18px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">📊</span> Official Rankings & Profile Archive
-    </div>
+<div style="background-color: #555555; color: white; padding: 18px 20px; font-weight: 800; font-size: 18px; display: flex; align-items: center; border-radius: 12px 12px 0 0; border-bottom: 3px solid #806600;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: rgba(255,255,255,0.1); width: 32px; height: 32px; border-radius: 8px;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+      <line x1="18" y1="20" x2="18" y2="10"></line>
+      <line x1="12" y1="20" x2="12" y2="4"></line>
+      <line x1="6" y1="20" x2="6" y2="14"></line>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">Official Rankings & Profile Archive</span>
+</div>
     <div style="padding: 25px; background-color: #fcfcfc; font-size: 13px;">
       <p><b style="color: #333;">• WAGR (World Amateur Golf Ranking):</b> <a href="https://www.wagr.com/playerprofile/joshua-hong-40704" target="_blank" style="color: #1565c0; font-weight: bold; text-decoration: none; border-bottom: 1px solid rgba(21, 101, 192, 0.3);">Official Joshua Hong Profile</a></p>
       
