--- a/reference-links.html
+++ b/reference-links.html
@@ -210,7 +210,7 @@
   </div>
   <span style="color: #475569; font-size: 14px; line-height: 1.5;">
     </span>
-</div><br>
+</div>
         <a href="https://www.golfgenius.com/pages/5776911" target="_blank" style="color: #1565c0; font-size: 14px; font-weight: bold; text-decoration: none; border-bottom: 1px solid #1565c0;">Patriot All-America Invitational (Leaderboard)</a> |  
         <a href="https://patriotallamerica.com/players/patriot_players-men/" target="_blank" style="color: #1565c0; font-size: 14px; text-decoration: none; border-bottom: 1px solid #1565c0;">Official Profile</a>
       </div>
