--- a/junior-career.html
+++ b/junior-career.html
@@ -219,9 +219,15 @@
 </div>
 
   <div style="margin-bottom: 50px;">
-    <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">📉</span> Annual Statistical Progression — Junior
-    </h3>
+<h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #e2e8f0;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <polyline points="23 18 13.5 8.5 8.5 13.5 1 6"></polyline>
+      <polyline points="17 18 23 18 23 12"></polyline>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">Annual Statistical Progression — Junior</span>
+</h3>
     <div class="table-container" style="overflow-x: auto;">
       <table style="width: 100%; min-width: 500px; border-collapse: collapse; text-align: center; box-shadow: 0 2px 8px rgba(0,0,0,0.05); border-radius: 10px; overflow: hidden;">
         <thead>
@@ -245,9 +251,16 @@
   </div>
 
   <div style="margin-bottom: 50px;">
-    <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🌎</span> International Results
-    </h3>
+<h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #e2e8f0;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="2" y1="12" x2="22" y2="12"></line>
+      <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">International Results</span>
+</h3>
     <div style="display: grid; grid-template-columns: 1fr; gap: 15px;">
       
       <div style="background: #f1f8e9; padding: 18px; border-radius: 12px; border-left: 6px solid #1b5e20; display: flex; align-items: center; box-shadow: 0 2px 5px rgba(0,0,0,0.03);">
@@ -309,9 +322,16 @@
   </div>
 
   <div style="margin-bottom: 50px;">
-    <h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">⛳</span> US Junior Tournaments Participation
-    </h3>
+<h3 style="font-size: 20px; color: #0c2340; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #e2e8f0;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M4 22h14"></path>
+      <path d="M10 22V5l8-3-8-3V2"></path>
+      <circle cx="10" cy="22" r="1"></circle>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">US Junior Tournaments Participation</span>
+</h3>
     <div id="tournaments-list" style="columns: 2; column-gap: 30px; background: #f8f9fa; padding: 25px; border-radius: 12px; font-size: 14px; line-height: 2.2; border: 1px solid #eee;">
       <div style="display: flex; align-items: center; margin-bottom: 5px;"><img src="https://flagcdn.com/w20/us.png" style="width: 18px; height: auto; margin-right: 8px;"> AJGA Simplify Boys Championship 2025</div>
       <div style="display: flex; align-items: center; margin-bottom: 5px;"><img src="https://flagcdn.com/w20/us.png" style="width: 18px; height: auto; margin-right: 8px;"> The Junior Players Championship 2024</div>
@@ -327,9 +347,19 @@
   </div>
 
   <div style="margin-bottom: 50px;">
-    <h3 style="font-size: 20px; color: #1b5e20; margin-bottom: 20px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🏆</span> Full Victories (2019–2025)
-    </h3>
+<h3 style="font-size: 20px; color: #1b5e20; margin-bottom: 20px; display: flex; align-items: center; font-weight: 800;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 36px; height: 36px; border-radius: 10px; border: 1px solid #dcfce7;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#1b5e20" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+      <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+      <path d="M4 22h16"></path>
+      <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+      <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+      <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">Full Victories (2019–2025)</span>
+</h3>
     
     <h4 style="color: #1b5e20; border-bottom: 2px solid #1b5e20; padding-bottom: 5px; margin-bottom: 15px;">Season 2025</h4>
     <div class="table-container" style="overflow-x: auto; margin-bottom: 30px;">
@@ -366,9 +396,15 @@
   </div>
 
   <div style="background-color: #fef9e7; padding: 25px; border-radius: 12px; border: 1px solid #f9e79f; margin-bottom: 50px; box-shadow: 0 4px 15px rgba(0,0,0,0.05);">
-    <h3 style="margin-top: 0; color: #9e7e00; font-size: 18px; display: flex; align-items: center;">
-      <span style="margin-right: 10px;">🥈</span> Podium Finishes & Runner-ups
-    </h3>
+<h3 style="margin-top: 0; color: #806600; font-size: 18px; display: flex; align-items: center; font-weight: 800;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #fffbeb; width: 34px; height: 34px; border-radius: 10px; border: 1px solid #fef3c7;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="8" r="6"></circle>
+      <path d="M15.477 12.89L17 22l-5-3-5 3 1.523-9.11"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: -0.5px;">Podium Finishes & Runner-ups</span>
+</h3>
     <ul style="font-size: 14px; margin-bottom: 0; line-height: 1.8; color: #5d4037;">
       <li><b>2025:</b> Campeonato Nacional de Parejas (2nd, Playoff) | Final Day (<span style="color:#d32f2f; font-weight: bold;">69, -3</span>)</li>
       <li><b>2024:</b> Copa Sureste (225, 2nd) | II Copa GADO (<span style="color:#d32f2f; font-weight: bold;">211, 2nd</span>) | Amateur West Mexico (2nd)</li>
@@ -409,16 +445,29 @@
       Major Honors & Recognition
     </h3>
     <div style="display: grid; grid-template-columns: 1fr; gap: 20px;">
-      <div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #ff5a00; display: flex; align-items: center;">
-        <span style="font-size: 24px; margin-right: 15px;">🏆</span>
-        <div>
+<div style="background: rgba(255,255,255,0.07); padding: 18px 25px; border-radius: 12px; border-left: 6px solid #806600; display: flex; align-items: center;">
+  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(128, 102, 0, 0.2); width: 44px; height: 44px; border-radius: 10px;">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M6 9H4.5a2.5 2.5 0 0 1 0-5H6"></path>
+      <path d="M18 9h1.5a2.5 2.5 0 0 0 0-5H18"></path>
+      <path d="M4 22h16"></path>
+      <path d="M10 14.66V17c0 .55-.47.98-.97 1.21C7.85 18.75 7 20.24 7 22"></path>
+      <path d="M14 14.66V17c0 .55.47.98.97 1.21C16.15 18.75 17 20.24 17 22"></path>
+      <path d="M18 2H6v7a6 6 0 0 0 12 0V2z"></path>
+    </svg>
+  </div>
+  <div>
           <b style="color: #ff5a00; display: block; margin-bottom: 3px;">FMG National Junior Champion</b>
           Consecutive Seasons 2023–24 & 2024–25
         </div>
       </div>
-      <div style="background: rgba(255,255,255,0.12); padding: 18px 25px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
-        <span style="font-size: 24px; margin-right: 15px;">🌟</span>
-        <div>
+<div style="background: rgba(255,255,255,0.12); padding: 18px 25px; border-radius: 12px; border: 1px solid rgba(255,255,255,0.2); display: flex; align-items: center;">
+  <div style="margin-right: 15px; display: flex; align-items: center; justify-content: center; background: rgba(255, 255, 255, 0.1); width: 44px; height: 44px; border-radius: 10px;">
+    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon>
+    </svg>
+  </div>
+  <div>
           <b style="color: #ffcc00; display: block; margin-bottom: 3px;">Billy Dettlaff Sportsmanship Award</b>
           The Junior Players Championship 2024
         </div>
@@ -434,10 +483,15 @@
   </div>
 
   <div style="margin-top: 60px; padding-top: 20px; border-top: 1px solid #eee;">
-    <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #1b5e20; padding-left: 15px;">
-      <span style="font-size: 20px; margin-right: 10px;">📸</span>
-      <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery (16 Photos)</h3>
-    </div>
+<div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #1b5e20; padding-left: 15px;">
+  <div style="margin-right: 12px; display: flex; align-items: center; justify-content: center; background: #f0fdf4; width: 36px; height: 36px; border-radius: 8px; border: 1px solid #dcfce7;">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="#1b5e20" stroke-width="2.2" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"></path>
+      <circle cx="12" cy="13" r="4"></circle>
+    </svg>
+  </div>
+  <h3 style="margin: 0; color: #1b5e20; font-size: 18px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">Junior Career Gallery (16 Photos)</h3>
+</div>
 
      <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px;">
       <img src="https://lh3.googleusercontent.com/d/1kUFqUexNjY3lvhMw7rPsEmTMgVsvrGbR" onclick="popupJrGallery(0)" style="width:100%; height:120px; object-fit:cover; object-position:top; border-radius:8px; cursor:pointer; transition: transform 0.2s; box-shadow: 0 2px 5px rgba(0,0,0,0.1);" onmouseover="this.style.transform='scale(1.03)'" onmouseout="this.style.transform='scale(1)'">
