--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -280,11 +280,18 @@
       <div style="font-size: 12px; color: #95a5a6; font-weight: 600; text-transform: uppercase; letter-spacing: 1px;">Last Updated: Jan 26, 2026</div>
     </div>
 
-    <div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #94a3b8; border-radius: 4px;">
-      <p style="margin: 0; font-size: 13px; color: #475569; font-weight: 700; line-height: 1.5;">
-        ⚠️ NOTICE: Schedule adjusted to Wed/Thu due to winter storm and course closure. Rounds are subject to change based on weather conditions.
-      </p>
-    </div>
+<div style="margin: 0 25px 15px 25px; padding: 12px 15px; background: #f8fafc; border-left: 4px solid #94a3b8; border-radius: 4px; display: flex; align-items: flex-start; gap: 10px;">
+  <div style="flex-shrink: 0; margin-top: 2px;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#64748b" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <circle cx="12" cy="12" r="10"></circle>
+      <line x1="12" y1="8" x2="12" y2="12"></line>
+      <line x1="12" y1="16" x2="12.01" y2="16"></line>
+    </svg>
+  </div>
+  <p style="margin: 0; font-size: 13px; color: #475569; font-weight: 700; line-height: 1.5;">
+    NOTICE: Schedule adjusted to Wed/Thu due to winter storm and course closure. Rounds are subject to change based on weather conditions.
+  </p>
+</div>
 
     <div style="border-radius: 0 0 15px 15px; overflow: hidden; border-top: 1px solid #edf2f7;">
       <table class="log-table">
@@ -304,11 +311,17 @@
               <div style="font-weight: 800; color: #0c2340; font-size: 16px; margin: 2px 0;">Round 1: The Canyons Course (Par 72)</div>
               <div style="font-size: 12px; color: #7f8c8d;">TPC San Antonio </div>
 
-              <button type="button" 
-                onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
-                style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
-                <span style="margin-right: 5px;">📊</span> VIEW SCORECARD
-              </button>
+<button type="button" 
+        onclick="gtag('event', 'view_scorecard', {'event_category': 'Engagement', 'event_label': 'Cancun Qualifying R1'}); document.getElementById('scorecard-modal').style.display='flex'"
+        style="cursor: pointer; display: inline-flex; align-items: center; margin-top: 8px; padding: 5px 12px; background: #ffffff; color: #0c2340; font-family: inherit; font-size: 11px; font-weight: 800; border-radius: 6px; border: 1.5px solid #0c2340; transition: all 0.2s; box-shadow: 0 2px 4px rgba(0,0,0,0.05);">
+  <div style="display: flex; align-items: center; justify-content: center; margin-right: 6px;">
+    <svg width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="3" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M3 3v18h18"></path>
+      <path d="M18 9l-5 5-2-2-4 4"></path>
+    </svg>
+  </div>
+  <span style="letter-spacing: 0.3px;">VIEW SCORECARD</span>
+</button>
 
               <div id="scorecard-modal" 
                 onclick="this.style.display='none'" 
@@ -1182,9 +1195,15 @@
   <div class="tech-gear-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
   <div style="margin-bottom: 50px;">
-    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 20px; border-left: 5px solid #0c2340; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase;">
-      🎥 TECHNICAL FOOTAGE
-    </h3>
+<h3 style="font-size: 16px; color: #0c2340; margin-bottom: 20px; border-left: 5px solid #0c2340; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
+  <div style="display: flex; align-items: center; justify-content: center; background: #f1f5f9; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #e2e8f0;">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="#0c2340" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M23 7l-7 5 7 5V7z"></path>
+      <rect x="1" y="5" width="15" height="14" rx="2" ry="2"></rect>
+    </svg>
+  </div>
+  <span>TECHNICAL FOOTAGE</span>
+</h3>
     <div style="display: grid; grid-template-columns: repeat(4, 1fr); gap: 12px; width: 100%;">
       <div style="border: 1px solid #e2e8f0; border-radius: 12px; overflow: hidden; background: #ffffff; box-shadow: 0 4px 12px rgba(0,0,0,0.05);">
         <div style="background: #0c2340; color: white; padding: 8px 0; font-size: 11px; font-weight: 800; text-align: center; letter-spacing: 1px;">DRIVER</div>
@@ -1214,9 +1233,19 @@
   </div>
 
   <div style="margin-bottom: 40px;">
-    <h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #c98a2e; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase;">
-      ⛳ WHAT'S IN THE BAG
-    </h3>
+<h3 style="font-size: 16px; color: #0c2340; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 12px; font-weight: 900; letter-spacing: 1px; text-transform: uppercase; display: flex; align-items: center; gap: 10px;">
+  <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 30px; height: 30px; border-radius: 6px; border: 1px solid #f1e6d0;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M6 12h9"></path>
+      <path d="M11 7l-2 2-2-2"></path>
+      <path d="M9 9v10"></path>
+      <rect x="5" y="3" width="14" height="18" rx="2"></rect>
+      <path d="M9 3v4"></path>
+      <path d="M15 3v4"></path>
+    </svg>
+  </div>
+  <span>WHAT'S IN THE BAG</span>
+</h3>
     
     <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 12px; margin-bottom: 12px;">
       <div style="background: #0c2340; color: white; padding: 20px; border-radius: 12px; display: flex; flex-direction: column; justify-content: space-between; min-height: 120px; box-shadow: 0 4px 15px rgba(12, 35, 64, 0.15);">
@@ -1282,10 +1311,16 @@
 
 
   <div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
-  <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #ff5a00; padding-left: 15px;">
-    <span style="font-size: 22px; margin-right: 10px;">📸</span>
-    <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
+<div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 15px;">
+  <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #f1e6d0; margin-right: 12px;">
+    <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+      <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+      <circle cx="8.5" cy="8.5" r="1.5"></circle>
+      <polyline points="21 15 16 10 5 21"></polyline>
+    </svg>
   </div>
+  <h3 style="margin: 0; color: #0c2340; font-size: 16px; letter-spacing: 1px; text-transform: uppercase; font-weight: 900;">JOURNEY IN PHOTOS</h3>
+</div>
 
   <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding-bottom: 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
     <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
