--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1310,7 +1310,7 @@
 </div>
 
 
- <div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
+<div class="gallery-section" style="max-width: 900px; margin: 0 auto 60px; padding: 0 15px; box-sizing: border-box; font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
   <div style="display: flex; align-items: center; margin-bottom: 25px; border-left: 5px solid #806600; padding-left: 15px;">
     <div style="display: flex; align-items: center; justify-content: center; background: #fdfaf3; width: 34px; height: 34px; border-radius: 8px; border: 1px solid #f1e6d0; margin-right: 12px;">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#806600" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
@@ -1323,23 +1323,21 @@
   </div>
 
   <div id="thumbScroll" style="display: flex; overflow-x: auto; gap: 15px; padding-bottom: 20px; -webkit-overflow-scrolling: touch; scroll-snap-type: x mandatory;">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(6)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(7)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(8)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(9)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(10)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(11)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(12)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(13)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1lCIaCOrTusifqK1yezz7e2-lTta_EZMl" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1d3bKS9feh0jHSUc417oDk3Keiy2gmDSV" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1ttYQR6vJiaT6bn37kOv3NM-9iBMWq5mD" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1tmxnMytAdxGeKYfqZLtmRUu4WDjnVIcT" onclick="popupGallery(3)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb" onclick="popupGallery(4)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI" onclick="popupGallery(5)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv" onclick="popupGallery(6)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7" onclick="popupGallery(7)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
 
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(0)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(1)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(2)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(3)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(4)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(5)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
-
-  
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg" onclick="popupGallery(8)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg" onclick="popupGallery(9)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg" onclick="popupGallery(10)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg" onclick="popupGallery(11)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg" onclick="popupGallery(12)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
+    <img src="./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg" onclick="popupGallery(13)" style="flex: 0 0 280px; height: 380px; object-fit: cover; border-radius: 16px; cursor: pointer; scroll-snap-align: start; border: 1px solid #f1f1f1; box-shadow: 0 10px 20px rgba(0,0,0,0.05);">
   </div>
 
   <script>
@@ -1351,13 +1349,13 @@
       "https://lh3.googleusercontent.com/u/0/d/1V8Xq_0vqHi59R0G4d5zQuJmgbC2c29Yb", 
       "https://lh3.googleusercontent.com/u/0/d/1QYoIC0eQs1aMsezqtEfqQIGfiG_xhGpI",
       "https://lh3.googleusercontent.com/u/0/d/1oTK7qKQZBZPMy-RNaTu_czW7sYHEImJv", 
-      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7"
+      "https://lh3.googleusercontent.com/u/0/d/1o66-D04s2dMwpWlBBcNC0HACsD-EqeZ7",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-Schedule-2025-2026.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg",
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg"
     ];
 
     function popupGallery(index) {
