--- a/ncaa-stats.html
+++ b/ncaa-stats.html
@@ -1355,7 +1355,7 @@
 
 
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands.jpeg",
-      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg"
+      "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-second-line-up-highlands-results.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent-results.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-argent-69.jpeg",
       "./images/freshman-2025-2026/joshua-hong-UTSA-Mens-golf-first-line-up-argent.jpeg",
