--- a/index.html
+++ b/index.html
@@ -228,10 +228,10 @@
         <div style="display: flex; align-items: center; gap: 10px;">
             <span style="background: #22c55e; color: white; padding: 3px 10px; border-radius: 4px; font-size: 9px; font-weight: 800; letter-spacing: 0.5px; text-transform: uppercase; display: flex; align-items: center; gap: 6px;">
                 <span style="width: 6px; height: 6px; background-color: #ff0000; border-radius: 50%; display: inline-block; animation: pulse-red 1s infinite; box-shadow: 0 0 5px #ff0000;"></span>
-                On-going
+                Rescheduled
             </span>
             <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
-                Compadres Collegiate Qualifying (The Canyons)
+                Compadres Collegiate Qualifying 3 (The Canyons)
             </div>
         </div>
         <div style="display: flex; align-items: center; gap: 15px;">
