--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 RESCHEDULED
             </span>
             <div style="color: #0c2340; font-weight: 700; font-size: 13px;">
-                Compadres Collegiate Qualifying (The Canyons)
+                Compadres Collegiate Qualifying 3 (The Canyons)
             </div>
         </div>
         <div style="display: flex; align-items: center; gap: 15px;">
